2003-08-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/tree.tcl (Tree::constructor): Don't pass
	-padx 3 to the pack command for the filter
	element of a Tree widget. The result of this
	change is that the right edge of the filter
	element is lined up with the scrollbars above.

2003-08-08  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/tcl/skeleton.c (main): Don't create
	and print a tmp file name as part of the
	PAF_FILE output unless the -h flag is passed
	to the parser. This will fixup output so
	that is can be used in regression tests.

2003-08-08  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/tcl/Trafo.c (add_variable_quals):
	Fixup error in generated C code, the was
	a disconnect between local variables that
	were both named obj. The fix was to comment
	out the obj variable in the inner scope so
	that the one from the enclosing scope would
	always be used.
	* tests/parsers/tcl.test: Add test case
	for core dump in var resolution code.
	The test does not pass but that is due
	to another bug.

2003-08-08  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/common/parser.c (put_cross_ref):
	Remove abort call when bad input is passed
	in to an xref call. There is no reason to
	abort here and no other bad input checks
	call abort.
	* tests/parsers/tcl.test: Add example that
	caused abort to be invoked when writing
	an xref.

2003-08-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/misc.tcl (sn_load_xref): Use list command
	when creating cbrowser2 command so that paths
	with spaces in them work properly.

2003-08-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/misc.tcl (load_xref_pipe, event_LoadPipeInput):
	Add check for the err "abnormal program termination"
	since this seems to be included when a Win32
	child process crashes.

2003-07-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* mkdist.txt: Add short description of steps
	one must take to create a SN dist file.
